<resources>
    <string name="app_name">EducationApp</string>
    <string name="login">Вход</string>
    <string name="email_hint">e-mail</string>
    <string name="password_hint">Пароль</string>
    <string name="login_button">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="group">Группа</string>
    <string name="dad_name">Отчество</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="reg">Регистрация</string>
    <string name="back_button_desc">Назад</string>
    <string name="rank_icon_desc">Иконка места в рейтинге</string>
    <string name="title_activity_level_map2">LevelMapActivity2</string>
</resources>