<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_reg">

    <!-- Заголовок -->

    <!-- Центрированный блок регистрации -->
    <LinearLayout
        android:id="@+id/form_container"
        android:layout_width="300dp"
        android:layout_height="570dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/small_background_reg"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:background="@drawable/rounded_white_input"
            android:hint="@string/email_hint"
            android:layout_marginTop="36dp"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/first_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_white_input"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_white_input"
            android:hint="@string/surname"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/middle_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_white_input"
            android:hint="@string/dad_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/group"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_white_input"
            android:hint="@string/group"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:autofillHints="password"
            android:background="@drawable/rounded_white_input"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textSize="16sp" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_dark_button"
            android:elevation="8dp"
            android:text="Зарегистрироваться"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <!-- Кнопка назад -->
    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_back"
        android:contentDescription="Назад"
        tools:ignore="TouchTargetSizeCheck" />
</RelativeLayout>
